[package]
name = "bitwarden-backup"
version = "0.1.0"
description = "Securer and composable Bitwarden backup"
authors = ["Simon Lundström <simmel@soy.se>"]
homepage = "https://github.com/simmel/bitwarden-backup"
repository = "https://github.com/simmel/bitwarden-backup"
license = "ISC"
edition = "2021"

[dependencies]
log = "^0.4"
env_logger = "^0.9"
argh = "^0.1"
nix = "0.23.1"
valico = "^3.6"
serde_json = "^1.0"
