[package]
name = "bitwarden-backup"
version = "1.1.0"
description = "Securer and composable Bitwarden backup"
authors = ["Simon Lundström <simmel@soy.se>"]
homepage = "https://github.com/simmel/bitwarden-backup"
repository = "https://github.com/simmel/bitwarden-backup"
license = "ISC"
edition = "2021"

[dependencies]
log = "^0.4"
env_logger = "^0.9"
argh = "^0.1"
valico = "^3.6"
serde_json = "^1.0"
zeroize = "^1.5"
anyhow = { version = "1.0.71", features = ["backtrace"] }

[target.'cfg(unix)'.dependencies]
nix = "0.23.1"

[target.'cfg(windows)'.dependencies]
notify = "^4.0"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
